# hpds-cli

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  dist-workspace.toml
.beads/: issues.jsonl
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml
docs/: audit-bot.md  conformance.md  hpds.toml.md
src/: main.rs
src/adapters/: diagnostic.rs  mod.rs  outcome.rs  panache.rs  python.rs  r.rs  registry.rs  runner.rs  sql.rs  test_support.rs
src/audit/: all.rs  mod.rs  report.rs  report_github.rs
src/audit/checks/: artifacts.rs  branches.rs  gitignore.rs  junk.rs  lifecycle.rs  lockfiles.rs  mod.rs  readme.rs  workspace.rs
src/audit/github/: checks.rs  mod.rs  model.rs
src/cli/: audit.rs  audit_all.rs  completions.rs  config.rs  fmt_lint.rs  format.rs  git.rs  init.rs  install.rs  lint.rs  mod.rs  project.rs  repo.rs  setup.rs  tools.rs  upgrade.rs  use.rs  version.rs
src/config/: discover.rs  mod.rs  raw.rs
src/fsx/: mod.rs  registry.rs  walk.rs
src/gitx/: mod.rs  repo.rs  vaccinate.rs
src/install/: fetch.rs  mod.rs  registry.rs  runner.rs  test_support.rs
src/install/installers/: duckdb.rs  gh.rs  mod.rs  quarto.rs  r.rs  rig.rs  tinytex.rs  togi.rs  uv.rs
src/setup/: mod.rs
src/setup/snapshots/: hpds__setup__tests__dev_plan_is_stable.snap  hpds__setup__tests__server_plan_is_stable_and_linux_shaped_on_any_host.snap
src/templates/: apply.rs  markers.rs  mod.rs  render.rs
src/templates/components/: container.rs  (+7 more)
src/tools/: cache.rs  download.rs  manifest.rs  mod.rs  platform.rs  spec.rs  test_support.rs  uv_tool.rs  versions.rs
src/ui/: error.rs  mod.rs  progress.rs  prompt.rs
templates/: README.md
templates/hpds-toml/: hpds.toml
tests/: audit.rs  audit_all.rs  audit_github.rs  audit_messy.rs  audit_report_github.rs  ci_workflow.rs  cli.rs  config.rs  docs_audit_bot.rs  docs_config_reference.rs  docs_conformance.rs  docs_contributing.rs  e2e_walkthrough.rs  format_lint.rs  git_setup.rs  git_vaccinate.rs  init.rs  install.rs  output_discipline.rs  readme_commands.rs  release_workflow.rs  repo_create.rs  setup.rs  smoke.rs  tools.rs  use_components.rs  use_container.rs  use_fetched.rs  use_gha.rs  use_pipeline.rs
tests/snapshots/: audit_messy__messy_human_report.snap  audit_messy__messy_json_report.snap  cli__help_audit.snap  cli__help_audit_all.snap  cli__help_audit_report_github.snap  cli__help_completions.snap  cli__help_config.snap  cli__help_format.snap  cli__help_git.snap  cli__help_git_setup.snap  cli__help_git_vaccinate.snap  cli__help_init.snap  cli__help_install.snap  cli__help_lint.snap  cli__help_project.snap  cli__help_project_init.snap  cli__help_repo.snap  cli__help_repo_create.snap  cli__help_root.snap  cli__help_setup.snap  cli__help_tools.snap  cli__help_tools_clean.snap  cli__help_tools_list.snap  cli__help_tools_update.snap  cli__help_upgrade.snap  cli__help_use.snap  cli__help_version.snap  setup__plan_dev_prints_the_numbered_plan_and_exits_zero.snap  setup__plan_server_prints_the_numbered_plan_on_every_os.snap
(+88 files in other folders)
