[package]
name = "hpds"
version = "0.1.0"
edition = "2024"
description = "Unified tooling for the Stanford HPDS lab: format, lint, templates, setup, and repo audits"
license = "MIT"
repository = "https://github.com/StanfordHPDS/hpds-cli"
homepage = "https://github.com/StanfordHPDS/hpds-cli"

[dependencies]
anstyle = "1.0.14"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
directories = "6"
fd-lock = "4"
flate2 = "1"
ignore = "0.4"
include_dir = "0.7"
indicatif = "0.18.6"
inquire = "0.9.4"
rayon = "1"
self-replace = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
similar = "2"
tar = "0.4"
tempfile = "3"
thiserror = "2"
toml = "0.9"
ureq = "3"
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }

[dev-dependencies]
assert_cmd = "2"
indicatif = { version = "0.18.6", features = ["in_memory"] }
insta = "1"
predicates = "3"
# Asserts that generated GitHub Actions workflow YAML actually parses.
serde_yaml = "0.9"
tiny_http = "0.12"

[features]
# Tests that hit the network or download real tools; excluded from the default
# offline test run (see spec §10/§11).
online-tests = []

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
